<resources>
    <string name="app_name">QMaker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Cadastrar</string>
    <string name="teacher">Professor</string>
    <string name="student">Aluno</string>
    <string name="you_are_a">Você é um:</string>
    <string name="login">Login</string>
    <string name="recovery_password">Esqueceu a senha? Clique aqui</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Senha</string>
    <string name="complete_name">Nome completo</string>
    <string name="password_repeat_placeholder">Repetir senha</string>
    <string name="error_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="error_password_confirmation">As senhas são diferentes</string>
    <string name="error_name">Nome inválido</string>
    <string name="error_not_empty">Campo obrigatório</string>
    <string name="error_password_short">Mínimo de 6 caracteres</string>
    <string name="ok">Ok</string>
    <string name="error_login">Atenção</string>
    <string name="cancel">Cancelar</string>
    <string name="recovery_password_title">Recuperar senha</string>
    <string name="recovery_password_message">Digite o email para enviarmos o link de recuperação de senha</string>
    <string name="email_recovery_sended_successfull">Email de recuperação enviado com sucesso</string>
    <string name="code_placeholder">Código</string>
    <string name="or_type_code">ou digite o código</string>
    <string name="scann_qrcode">Escaneie o QRCode</string>
    <string name="send">Enviar</string>
    <string name="caution">Atenção</string>
    <string name="code_empty_message">Você deve ler um código QRCode ou digitar um código manualmente.</string>
    <string name="new_quiz">Novo Quiz</string>
    <string name="my_quizzes">Meus quizzes</string>
    <string name="summary">Resumo</string>
    <string name="settings">Configurações</string>
    <string name="empty_list_quizzes">Nenhum quiz disponível</string>
    <string name="remove_quiz_alert_title">Remover Quiz</string>
    <string name="remove_quiz_alert_message">Tem certeza que deseja remover? Essa operação não pode ser desfeita.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="undo">Desfazer</string>
    <string name="Delete">delete</string>
    <string name="unpublish">Despublicar</string>
    <string name="publish">Publicar</string>
    <string name="quiz_updated">Quiz atualizado</string>
    <string name="error_update_quiz">Erro ao atualizar quiz</string>
    <string name="close">Fechar</string>
    <string name="share_your_quiz_dialog_title">Compartilhe o Quiz</string>
    <string name="chose_app">Escolha um app</string>
    <string name="text_share_quiz">Acesse e responda o quiz baixando o app no endereço e pelo app leia o QRCode ou digite o código</string>
    <string name="answer">Resposta</string>
    <string name="isTrue">Verdadeira</string>
    <string name="isFalse">Falsa</string>
    <string name="confirm">Confirmar</string>
    <string name="add">Adicionar</string>
    <string name="type_a_answer">Digite uma resposta</string>
    <string name="save">Salvar</string>
    <string name="answers_save_successful">Respostas salvas</string>
    <string name="error_empty_answers">A pergunta deve ter pelo menos 2 respostas</string>
    <string name="alert_remove_question">Tem certeza que deseja remover a pergunta?\nEsta operação não pode ser desfeita.</string>
    <string name="question_removed">Pergunta removida</string>
    <string name="question">Pergunta</string>
    <string name="type_a_question">Digite uma pergunta</string>
    <string name="type_a_quiz">Digite o nome do quiz</string>
    <string name="quiz_saved">Quiz salvo</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_removed">Quiz removido</string>
    <string name="quiz_remove_error">Erro ao remover quiz</string>
    <string name="empty_list_questions">Nenhuma pergunta disponível</string>
    <string name="invalid_code">Código inválido. Não existe quiz relacionado a esse código</string>
    <string name="name_placeholder">Nome</string>
    <string name="class_placeholder">Turma ou grupo</string>
    <string name="start_quiz">Iniciar quiz</string>
    <string name="message_leave_answers">Tem certeza que deseja sair? Todas as respostas serão canceladas.</string>
    <string name="finish">Finalizar</string>
    <string name="next_question">Próxima pergunta</string>
    <string name="answer_not_checked_message">Nenhuma resposta foi marcada. Selecione uma resposta</string>
    <string name="error_save_answers">Falha ao salvar questionário. Verifique sua conexão.</string>
    <string name="answered">respondidos</string>
    <string name="below_media">Acima da média</string>
    <string name="dashboard_resume">Resumo de resultados</string>
    <string name="students">Alunos</string>
    <string name="hits">de acerto</string>
    <string name="logout">Sair</string>
    <string name="change_password">Alterar senha</string>
    <string name="message_logout">Tem certeza que deseja sair?</string>
    <string name="type_new_password">Digite a nova senha</string>
    <string name="error_required_field">Campo obrigatório</string>
    <string name="message_password_changed">Password alterado com sucesso</string>
    <string name="be_plus">Seja Plus</string>
    <string name="password">Nova senha</string>
    <string name="password_repeat">Repetir senha nova</string>
    <string name="current_password">Senha atual</string>
    <string name="empty_list_result_quizzes">Nenhum resultado disponível</string>
    <string name="be_premium">Seja Premium</string>
    <string name="change_plan">Alterar plano</string>
    <string name="message_change_to_basic_plan">Tem certeza que deseja cancelar seu plano?</string>
    <string name="payment_method">Método de pagamento</string>
</resources>
