<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_a_answer"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:hint="@string/answer"
        android:inputType="text|textCapSentences|textMultiLine"
        android:scrollbars="vertical" />

    <belka.us.androidtoggleswitch.widgets.ToggleSwitch
        android:id="@+id/toggle_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        custom:separatorColor="@color/white"
        custom:textToggleLeft="@string/isFalse"
        custom:textToggleRight="@string/isTrue"
        custom:inactiveTextColor="@android:color/black"
        custom:cornerRadius="10dp"
        custom:toggleWidth="150dp"
        custom:activeBgColor="@color/swipeoption_purple"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>