<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.launchscreen.LaunchScreenActivity">

    <Button
        android:id="@+id/button_teacher"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:onClick="goToLogin"
        android:text="@string/teacher"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/button_student"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:onClick="goToCodeReader"
        android:text="@string/student"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/you_are_a"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>