<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.tabs.SettingsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/button_change_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical">

        <TextView
            android:id="@+id/tv_plan"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:textStyle="bold"
            android:text="@string/be_plus" />

        <ImageView
            android:id="@+id/iv_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/star"/>

        <ImageView
            android:id="@+id/iv_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/star"
            android:visibility="invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <TextView
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/change_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <TextView
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/logout" />

</LinearLayout>